--- a/src/app/pages/graficas1/graficas1.component.html
+++ b/src/app/pages/graficas1/graficas1.component.html
@@ -1,3 +1,73 @@
-<p>
-  graficas1 works!
-</p>
+<div class="row">
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <h4 class="cad-title">{{graficos.grafico1.leyenda}</h4>
+        <div>
+          <div>
+              <h4 class="cad-title">{{graficos.grafico1.leyenda}</h4>
+            <app-grafico-dona [ChartLabels]="graficos.grafico1.labels" [ChartData]="graficos.grafico1.data"
+              ChartType="doughnut">
+
+            </app-grafico-dona>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <div>
+          <div>
+            <app-grafico-dona [ChartLabels]="graficos.grafico2.labels" [ChartData]="graficos.grafico2.data"
+              ChartType="doughnut">
+
+            </app-grafico-dona>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<div class="row">
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <div>
+          <div>
+            <app-grafico-dona [ChartLabels]="graficos.grafico3.labels" [ChartData]="graficos.grafico3.data"
+              ChartType="doughnut">
+
+            </app-grafico-dona>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <div>
+          <div>
+            <app-grafico-dona [ChartLabels]="graficos.grafico1.labels" [ChartData]="graficos.grafico1.data"
+              ChartType="doughnut">
+
+            </app-grafico-dona>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
